Adicionando css da formação e cursos

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 
     <link rel="stylesheet" href="/assets//css/acordeon.css">
+    <link rel="stylesheet" href="/assets/css/course.css">
+    <link rel="stylesheet" href="/assets/css/academic.css">
     <link rel="stylesheet" href="/assets/css/skills.css">
     <link rel="stylesheet" href="/assets/css/experience.css">
     <link rel="stylesheet" href="/assets/css/portfolio.css">
@@ -134,7 +136,7 @@
             </button>
 
             <div class="content">
-                <ul class="experience">
+                <ul class="academic">
 
                     <li>
                         <h3 class="title">Análise e Desenvolvimento de Sistemas / PUC MINAS</h3>
@@ -175,7 +177,7 @@
             </button>
 
             <div class="content">
-                <ul class="experience">
+                <ul class="course">
 
                     <li>
                         <h3 class="title">Formação Lógica de Programação / DIO</h3>
