Organizando o portfólio de projetos

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <section class="acordeon">
 
             <button class="trigger" type="button">
-                <h2>Portfólio</h2>
+                <h2>Projetos</h2>
             </button>
 
             <div class="content">
@@ -241,10 +241,6 @@
                     <li>
                         <span class="title github">Clone do BuzzFeed</span>
                         <a href="https://github.com/SymonSL7/projeto-buzzfeed" target="_blank" rel="noopener">www.github.com/SymonSL7/projeto-buzzfeed</a>
-                    </li>
-                    <li>
-                        <span class="title github">Barber Shop Angular com Integração com API em Java</span>
-                        <a href="https://github.com/SymonSL7/barber-shop-ui" target="_blank" rel="noopener">www.github.com/SymonSL7/barber-shop-ui</a>
                     </li>
                 </ul>
             </div>
