--- a/index.html
+++ b/index.html
@@ -32,22 +32,25 @@
 
         <header class="header">
 
-            <img src="/assets/img/ImagemPortifolio.jpeg" alt="Foto de Symon S Lima" class="photo">
+            <img src="/assets/img/ImagemPortifolio.jpeg" alt="Foto de Perfil" class="photo" id="profile.photo">
 
-            <h1 class="title">Olá, <br>eu sou o Symon S Lima</h1>
+            <h1 class="title">
+                Olá, <br>eu sou o <span id="id.name">Carregando..</span>
+            </h1>
 
             <div class="informations">
                 <p class="job">
-                    <a href="https://www.linkedin.com/in/symonsilvalima/" target="_blank" rel="noopener">Estudante de
-                        Desenvolvimento</a>
+                    <a href="https://www.linkedin.com/in/symonsilvalima/" target="_blank" rel="noopener" id="profile.job">
+                    Carregando...
+                    </a>
                 </p>
-                <p class="location">Minas Gerais - BR</p>
+                <p class="location" id="profile.location">Carregando...</p>
                 <p class="phone">
-                    <a href="https://wa.me/5531991214533">(31)9 9121-4533</a>
+                    <a href="https://wa.me/5531991214533" id="profile.phone">Carregando...</a>
                 </p>
 
                 <p class="email">
-                    <a href="mailto:symon.silva.lima@hotmail.com">symon.silva.lima@hotmail.com</a>
+                    <a href="mailto:symon.silva.lima@hotmail.com" id="profile.email">Carregando...</a>
                 </p>
             </div>
 
@@ -318,6 +321,8 @@
     </main>
 
     <script src="/assets/js/acordeon.js"></script>
+    <script src="/assets/js/api.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
