--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="/assets/img/ImagemPortifolio.jpeg" alt="Foto de Perfil" class="photo" id="profile.photo">
 
             <h1 class="title">
-                Olá, <br>eu sou o <span id="id.name">Carregando..</span>
+                Olá, <br>eu sou o <span id="profile.name">Carregando..</span>
             </h1>
 
             <div class="informations">
