--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
 
             <div class="informations">
                 <p class="job">
-                    <a href="https://www.linkedin.com/in/symonsilvalima/" target="_blank" rel="noopener" id="profile.job">
+                    <a href="" target="_blank" rel="noopener" id="profile.job">
                     Carregando...
                     </a>
                 </p>
                 <p class="location" id="profile.location">Carregando...</p>
                 <p class="phone">
-                    <a href="https://wa.me/5531991214533" id="profile.phone">Carregando...</a>
+                    <a href="" id="profile.phone">Carregando...</a>
                 </p>
 
                 <p class="email">
-                    <a href="mailto:symon.silva.lima@hotmail.com" id="profile.email">Carregando...</a>
+                    <a href="" id="profile.email">Carregando...</a>
                 </p>
             </div>
 
