--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <header class="header">
 
-            <img src="/assets/img/ImagemPortifolio.jpeg" alt="Foto de Perfil" class="photo" id="profile.photo">
+            <img src="" alt="Foto de Perfil" class="photo" id="profile.photo">
 
             <h1 class="title">
                 Olá, <br>eu sou o <span id="profile.name">Carregando..</span>
