--- a/index.html
+++ b/index.html
@@ -127,12 +127,10 @@
     
                     <section class="personal">
                         <h3>Habilidades Pessoais:</h3>
-                        <ul>
-                            <li>Trabalho em Equipe</li>
-                            <li>Organização</li>
-                            <li>Comunicação</li>
-                            <li>Comprometimento com Resultados</li>
-                            <li>Facilidade com Tarefas Práticas</li>
+                        <ul id="profile.skills.softSkills">
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
                         </ul>
                     </section>
 
