--- a/index.html
+++ b/index.html
@@ -68,59 +68,12 @@
 
                     <section class="tools">
                         <h3>Habilidades Profissionais:</h3>
-                        <ul>
-                            <li>
-                                <img src="/assets/img/skills/html.svg" alt="HTML" title="HTML">
-                            </li>
-                            <li>
-                                <img src="/assets/img/skills/css.svg" alt="CSS" title="CSS">
-                            </li>
-                            <li>
-                                <img src="/assets/img/skills/javascript.svg" alt="JavaScript" title="JavaScript">
-                            </li>
-                            <li>
-                                <img src="/assets/img/skills/typescript.svg" alt="TypeScript" title="TypeScript">
-                            </li>
-                            <li>
-                                <img src="/assets/img/skills/angular.svg" alt="Angular" title="Angular">
-                            </li>
-                            <li>
-                                <img src="/assets/img/skills/java.svg" alt="Java" title="Java">
-                            </li>
-                            <li>
-                                <img src="/assets/img/skills/springboot.svg" alt="SpringBoot" title="SpringBoot">
-                            </li>
-                            <li>
-                                <img src="/assets/img/skills/nodejs.svg" alt="NodeJS" title="NodeJS">
-                            </li>
-                            <li>
-                                <img src="/assets/img/skills/github.svg" alt="GitHub" title="GitHub">
-                            </li>
-
-                            <!--
-                                <li>
-                                    <img src="/assets/img/skills/postgress.svg" alt="Postgress" title="Windows">
-                                </li>
-                            -->
-
-                            <!--
-                                <li>
-                                    <img src="/assets/img/skills/mysql.svg" alt="MySql" title="MySql">
-                                </li>
-                            -->
-
-                            <!--
-                                <li>
-                                    <img src="/assets/img/skills/sqlserver.svg" alt="SqlServer" title="SqlServer">
-                                </li>
-                            -->
+                        <ul id="profile.skills.hardSkills">
 
                             <li>
-                                <img src="/assets/img/skills/docker.svg" alt="Docker" title="Docker">
+                                <img src="/assets/img/my-photo.png" alt="Carregando..." title="Carregando...">
                             </li>
-                            <li>
-                                <img src="/assets/img/skills/windows.svg" alt="Windows" title="Windows">
-                            </li>
+
 
                         </ul>
                     </section>
@@ -222,8 +175,8 @@
             </button>
 
             <div class="content">
-                <ul class="languages">
-                    <li>Português</li>
+                <ul class="languages" id="profile.languages">
+                    <li>Carregando...</li>
                 </ul>
             </div>
 
@@ -236,23 +189,8 @@
             </button>
 
             <div class="content">
-                <ul class="portfolio">
-                    <li>
-                        <span class="title github">GitHub Symon</span>
-                        <a href="https://github.com/SymonSL7" target="_blank" rel="noopener">www.github.com/SymonSL7</a>
-                    </li>
-                    <li>
-                        <span class="title github">Repositórios</span>
-                        <a href="https://github.com/SymonSL7?tab=repositories" target="_blank" rel="noopener">www.github.com/SymonSL7?tab=repositories</a>
-                    </li>
-                    <li>
-                        <span class="title github">Pokedex com JavaScript</span>
-                        <a href="https://github.com/SymonSL7/PokedexJavaScript" target="_blank" rel="noopener">www.github.com/SymonSL7/PokedexJavaScript</a>
-                    </li>
-                    <li>
-                        <span class="title github">Clone do BuzzFeed</span>
-                        <a href="https://github.com/SymonSL7/projeto-buzzfeed" target="_blank" rel="noopener">www.github.com/SymonSL7/projeto-buzzfeed</a>
-                    </li>
+                <ul class="portfolio" id="profile.portfolio">
+
                 </ul>
             </div>
 
@@ -266,51 +204,16 @@
             </button>
 
             <div class="content">
-                <ul class="experience">
+                <ul class="experience" id="profile.professionalExperience">
+
                     <li>
-                        <h3 class="title">REALOCAÇÃO – PAUSA NA CARREIRA / Autônomo e Particular</h3>
-                        <span class="period">01/03/2022 - Atual</span>
-                        <p>-
-                            <a
-                                href="https://linktr.ee/ProdutosMutari?fbclid=PAZXh0bgNhZW0CMTEAAafiq_hpiK6lEFDrVxh3Eef7___q4F_iW17iGM8S7UxTLEYPsop57PVal71rIg_aem_h0ra15ojSCPsy2Zf-w-6tA"
-                                target="_blank" rel="noopener">
-                                Trabalho Autônomo.</a>
+                        <h3 class="title">Carregando...</h3>
+                        <span class="period" >Carregando...</span>
+                        <p id="profile.professionalExperience.description" >
+.                           - Carregando...
                         </p>
                     </li>
-                    <li>
-                        <h3 class="title">Técnico em Suporte de TI / ATMC CONSULTORIA E ENGENHARIA</h3>
-                        <span class="period">22/07/2019 - 25/02/2022</span>
-                        <p>
-                            - Suporte ao Usuário - Remoto e Presencial.<br>
-                            - Gestão de AD, Windows Server, Backup, Firewall.<br>
-                            - Instalação e Resolução de Problemas, Windows, Softwares e Hardwares.<br>
-                            - Manutenção de Infraestrutura de Redes.<br>
-                            - Inventário e Controle de Equipamentos.<br>
-                            - Auxiliar de Projetos de Engenharia de Automação.
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="title">Técnico em Suporte de TI / FC INFORMÁTICA</h3>
-                        <span class="period">04/01/2019 - 19/07/2019</span>
-                        <p>
-                            - Suporte ao Cliente (Usuário) - Remoto e Presencial (Terceirizado).<br>
-                            - Gestão de AD, Windows Server, Backup.<br>
-                            - Instalação e Resolução de Problemas, Windows, Softwares e Hardwares.<br>
-                            - Suporte a Sites Jurídicos e Configuração de Token.<br>
-                            - Manutenção de Infraestrutura de Redes.<br>
-                        </p>
-                    </li>
-                    <li>
-                        <h3 class="title">Estagiário de Suporte de TI / ATMC CONSULTORIA E ENGENHARIA</h3>
-                        <span class="period">23/04/2018 - 03/01/2019</span>
-                        <p>
-                            - Suporte ao Usuário - Presencial.<br>
-                            - Gestão de AD, Windows Server, Backup, Firewall.<br>
-                            - Instalação e Resolução de Problemas, Windows, Softwares e Hardwares.<br>
-                            - Manutenção de Infraestrutura de Redes.<br>
-                            - Inventário e Controle de Equipamentos.<br>
-                        </p>
-                    </li>
+                    
                 </ul>
             </div>
 
