--- a/index.html
+++ b/index.html
@@ -100,35 +100,16 @@
             </button>
 
             <div class="content">
-                <ul class="academic">
+                <ul class="academic" id="profile.academic">
 
                     <li>
-                        <h3 class="title">Análise e Desenvolvimento de Sistemas / PUC MINAS</h3>
-                        <span class="period">02/2025 - Cursando</span>
+                        <h3 class="title">Carregando...</h3>
+                        <span class="period">Carregando...</span>
                         <p>
-                            - Lógica de Programação<br>
-                            - HTML<br>
-                            - CSS<br>
-                            - JavaScript<br>
-                            - Metodologia Ágil<br>
+                            - Carregando...
                         </p>
                     </li>
-                    <li>
-                        <h3 class="title">Técnico Desenvolvimento de Sistemas / Senai Fatec BH</h3>
-                        <span class="period">10/2017 - 02/2019</span>
-                        <p>
-                            - Lógica de Programação<br>
-                            - HTML<br>
-                            - CSS<br>
-                            - JavaScript<br>
-                            - C#<br>
-                            - Java<br>
-                            - Banco de Dados<br>
-                            - Aplicação Web<br>
-                            - Aplicação Desktop<br>
-                            - Aplicação Mobile<br>
-                        </p>
-                    </li>
+
                 </ul>
             </div>
 
@@ -141,28 +122,13 @@
             </button>
 
             <div class="content">
-                <ul class="course">
+                <ul class="course" id="profile.courses">
 
                     <li>
-                        <h3 class="title">Formação Lógica de Programação / DIO</h3>
-                        <span class="period">03/2025</span>
+                        <h3 class="title">Carregando...</h3>
+                        <span class="period">Carregando..</span>
                     </li>
-                    <li>
-                        <h3 class="title">2025BOOTCAMP - Avanade - Decola Tech 2025 Full Stack Angular & Spring Boot / DIO</h3>
-                        <span class="period">03/2025</span>
-                    </li>
-                    <li>
-                        <h3 class="title">BOOTCAMP - GFT - Desenvolvimento Java com IA / DIO</h3>
-                        <span class="period">11/2024</span>
-                    </li>
-                    <li>
-                        <h3 class="title">Lógica de Programação com Java Para Iniciantes / AlgaWorks</h3>
-                        <span class="period">11/2024</span>
-                    </li>
-                    <li>
-                        <h3 class="title">Banco de Dados e SQL Para Iniciantes / AlgaWorks</h3>
-                        <span class="period">07/2024</span>
-                    </li>
+
                 </ul>
             </div>
 
