--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="/assets//css/acordeon.css">
-    <link rel="stylesheet" href="/assets/css/course.css">
-    <link rel="stylesheet" href="/assets/css/academic.css">
-    <link rel="stylesheet" href="/assets/css/skills.css">
-    <link rel="stylesheet" href="/assets/css/experience.css">
-    <link rel="stylesheet" href="/assets/css/portfolio.css">
-    <link rel="stylesheet" href="/assets/css/languages.css">
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/acordeon.css">
+    <link rel="stylesheet" href="assets/css/course.css">
+    <link rel="stylesheet" href="assets/css/academic.css">
+    <link rel="stylesheet" href="assets/css/skills.css">
+    <link rel="stylesheet" href="assets/css/experience.css">
+    <link rel="stylesheet" href="assets/css/portfolio.css">
+    <link rel="stylesheet" href="assets/css/languages.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/header.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
 
         <header class="header">
 
-            <img src="/assets/img/my-photo.png" alt="Foto de Perfil" class="photo" id="profile.photo">
+            <img src="assets/img/my-photo.png" alt="Foto de Perfil" class="photo" id="profile.photo">
 
             <h1 class="title">
                 Olá, <br>eu sou o <span id="profile.name">Carregando..</span>
@@ -71,7 +71,7 @@
                         <ul id="profile.skills.hardSkills">
 
                             <li>
-                                <img src="/assets/img/my-photo.png" alt="Carregando..." title="Carregando...">
+                                <img src="assets/img/my-photo.png" alt="Carregando..." title="Carregando...">
                             </li>
 
 
@@ -187,9 +187,9 @@
 
     </main>
 
-    <script src="/assets/js/acordeon.js"></script>
-    <script src="/assets/js/api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/acordeon.js"></script>
+    <script src="assets/js/api.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
