--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                 </p>
                 <p class="location" id="profile.location">Carregando...</p>
                 <p class="phone">
-                    <a href="" id="profile.phone">Carregando...</a>
+                    <a href="" target="_blank" rel="noopener" id="profile.phone">Carregando...</a>
                 </p>
 
                 <p class="email">
-                    <a href="" id="profile.email">Carregando...</a>
+                    <a href="" target="_blank" rel="noopener" id="profile.email">Carregando...</a>
                 </p>
             </div>
 
