Contador de Visitas

--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
 
         </section>
 
+        <section class="badge-container">
+            <img src="https://visitor-badge.laobi.icu/badge?page_id=SymonSL7.Portfolio" alt="Visitas" class="visitor-badge">
+        </section>
+
     </main>
 
     <script src="assets/js/acordeon.js"></script>
